--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -1482,6 +1482,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station</th>\n",
+       "      <th>June Avg Prcp</th>\n",
+       "      <th>Dec Avg Prcp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00511918</td>\n",
+       "      <td>0.015157</td>\n",
+       "      <td>0.138146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00513117</td>\n",
+       "      <td>0.118248</td>\n",
+       "      <td>0.203241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00514830</td>\n",
+       "      <td>0.114192</td>\n",
+       "      <td>0.154966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>0.495748</td>\n",
+       "      <td>0.507005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00517948</td>\n",
+       "      <td>0.057975</td>\n",
+       "      <td>0.152727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>USC00518838</td>\n",
+       "      <td>0.094615</td>\n",
+       "      <td>0.638182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>USC00519281</td>\n",
+       "      <td>0.151525</td>\n",
+       "      <td>0.244931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>0.022661</td>\n",
+       "      <td>0.075314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>USC00519523</td>\n",
+       "      <td>0.050044</td>\n",
+       "      <td>0.162010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Station  June Avg Prcp  Dec Avg Prcp\n",
+       "0  USC00511918       0.015157      0.138146\n",
+       "1  USC00513117       0.118248      0.203241\n",
+       "2  USC00514830       0.114192      0.154966\n",
+       "3  USC00516128       0.495748      0.507005\n",
+       "4  USC00517948       0.057975      0.152727\n",
+       "5  USC00518838       0.094615      0.638182\n",
+       "6  USC00519281       0.151525      0.244931\n",
+       "7  USC00519397       0.022661      0.075314\n",
+       "8  USC00519523       0.050044      0.162010"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "june_p = session.query(Measurement.station, func.avg(Measurement.prcp)).\\\n",
+    "group_by(Measurement.station).filter(extract('month', Measurement.date) == 6)\n",
+    "\n",
+    "dec_p = session.query(Measurement.station, func.avg(Measurement.prcp)).\\\n",
+    "group_by(Measurement.station).filter(extract('month', Measurement.date) == 12)\n",
+    "\n",
+    "june_p_ls = list(june_p)\n",
+    "dec_p_ls = list(dec_p)\n",
+    "\n",
+    "june_p_df = pd.DataFrame(june_p_ls, columns=['Station', 'June Avg Prcp'])\n",
+    "dec_p_df = pd.DataFrame(dec_p_ls, columns=['Station', 'Dec Avg Prcp'])\n",
+    "\n",
+    "combined_p_df = june_p_df.merge(dec_p_df, how='left', on='Station')\n",
+    "combined_p_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
    "outputs": [
@@ -1646,7 +1771,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>June Min Temp</th>\n",
+       "      <th>June Max Temp</th>\n",
+       "      <th>Dec Min Temp</th>\n",
+       "      <th>Dec Max Temp</th>\n",
+       "      <th>June Avg Prcp</th>\n",
+       "      <th>Dec Avg Prcp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00511918</td>\n",
+       "      <td>21.31520</td>\n",
+       "      <td>-157.99920</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>0.015157</td>\n",
+       "      <td>0.138146</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00513117</td>\n",
+       "      <td>21.42340</td>\n",
+       "      <td>-157.80150</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.118248</td>\n",
+       "      <td>0.203241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00514830</td>\n",
+       "      <td>21.52130</td>\n",
+       "      <td>-157.83740</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.114192</td>\n",
+       "      <td>0.154966</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>21.33310</td>\n",
+       "      <td>-157.80250</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>0.495748</td>\n",
+       "      <td>0.507005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00517948</td>\n",
+       "      <td>21.39340</td>\n",
+       "      <td>-157.97510</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>0.057975</td>\n",
+       "      <td>0.152727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>USC00518838</td>\n",
+       "      <td>21.49920</td>\n",
+       "      <td>-158.01110</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>0.094615</td>\n",
+       "      <td>0.638182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>USC00519281</td>\n",
+       "      <td>21.45167</td>\n",
+       "      <td>-157.84889</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.151525</td>\n",
+       "      <td>0.244931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>21.27160</td>\n",
+       "      <td>-157.81680</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>0.022661</td>\n",
+       "      <td>0.075314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>USC00519523</td>\n",
+       "      <td>21.33556</td>\n",
+       "      <td>-157.71139</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.050044</td>\n",
+       "      <td>0.162010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Station  latitude  longitude  June Min Temp  June Max Temp  \\\n",
+       "0  USC00511918  21.31520 -157.99920           66.0           85.0   \n",
+       "1  USC00513117  21.42340 -157.80150           68.0           83.0   \n",
+       "2  USC00514830  21.52130 -157.83740           67.0           81.0   \n",
+       "3  USC00516128  21.33310 -157.80250           66.0           79.0   \n",
+       "4  USC00517948  21.39340 -157.97510           64.0           82.0   \n",
+       "5  USC00518838  21.49920 -158.01110           67.0           78.0   \n",
+       "6  USC00519281  21.45167 -157.84889           65.0           82.0   \n",
+       "7  USC00519397  21.27160 -157.81680           70.0           84.0   \n",
+       "8  USC00519523  21.33556 -157.71139           71.0           82.0   \n",
+       "\n",
+       "   Dec Min Temp  Dec Max Temp  June Avg Prcp  Dec Avg Prcp  \n",
+       "0          57.0          81.0       0.015157      0.138146  \n",
+       "1          63.0          80.0       0.118248      0.203241  \n",
+       "2          62.0          79.0       0.114192      0.154966  \n",
+       "3          60.0          83.0       0.495748      0.507005  \n",
+       "4          64.0          82.0       0.057975      0.152727  \n",
+       "5          63.0          78.0       0.094615      0.638182  \n",
+       "6          58.0          79.0       0.151525      0.244931  \n",
+       "7          56.0          77.0       0.022661      0.075314  \n",
+       "8          56.0          79.0       0.050044      0.162010  "
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_combined = final_combined_df.merge(combined_p_df, how='left', on='Station')\n",
+    "p_combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1737,40 +2046,42 @@
        "8  21.33556 -157.71139"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "locations = stations_df[['latitude', 'longitude']]\n",
+    "locations = final_combined_df[['latitude', 'longitude']]\n",
     "locations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "info_box_template = \"\"\"\n",
     "<dl>\n",
-    "<dt>Station Name</dt><dd>{station}</dd>\n",
+    "<dt>Station Name</dt><dd>{Station}</dd>\n",
+    "<dt>June Temps</dt><dd>Min: {June Min Temp}, Max: {June Max Temp} °F</dd>\n",
+    "<dt>Dec Temps</dt><dd>Min: {Dec Min Temp}, Max: {Dec Max Temp} °F</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
     "\n",
-    "station_info = [info_box_template.format(**row) for index, row in stations_df.iterrows()]"
+    "station_info = [info_box_template.format(**row) for index, row in final_combined_df.iterrows()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b02115fceb8494d9708e86caa89760f",
+       "model_id": "08211f0a257043938b11ccffdd782df3",
        "version_major": 2,
        "version_minor": 0
       },
