--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +956,7 @@
        "8  USC00519523          79.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,6 @@
    "source": [
     "station_dec_max = session.query(Measurement.station, func.max(Measurement.tobs)).\\\n",
     "group_by(Measurement.station).order_by(func.max(Measurement.station)).filter(extract('month', Measurement.date) == 12).all()\n",
-    "#station_dec_max\n",
     "station_dec_max_ls = list(station_dec_max)\n",
     "dec_max_df = pd.DataFrame(station_dec_max_ls, columns=['Station', 'Dec Max Temp'])\n",
     "dec_max_df"
@@ -1482,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1515,75 +1514,75 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USC00511918</td>\n",
-       "      <td>0.015157</td>\n",
-       "      <td>0.138146</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0.138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>USC00513117</td>\n",
-       "      <td>0.118248</td>\n",
-       "      <td>0.203241</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>0.203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>USC00514830</td>\n",
-       "      <td>0.114192</td>\n",
-       "      <td>0.154966</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>0.155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>USC00516128</td>\n",
-       "      <td>0.495748</td>\n",
-       "      <td>0.507005</td>\n",
+       "      <td>0.496</td>\n",
+       "      <td>0.507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>USC00517948</td>\n",
-       "      <td>0.057975</td>\n",
-       "      <td>0.152727</td>\n",
+       "      <td>0.058</td>\n",
+       "      <td>0.153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>USC00518838</td>\n",
-       "      <td>0.094615</td>\n",
-       "      <td>0.638182</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>USC00519281</td>\n",
-       "      <td>0.151525</td>\n",
-       "      <td>0.244931</td>\n",
+       "      <td>0.152</td>\n",
+       "      <td>0.245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>USC00519397</td>\n",
-       "      <td>0.022661</td>\n",
-       "      <td>0.075314</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>USC00519523</td>\n",
-       "      <td>0.050044</td>\n",
-       "      <td>0.162010</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.162</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Station  June Avg Prcp  Dec Avg Prcp\n",
-       "0  USC00511918       0.015157      0.138146\n",
-       "1  USC00513117       0.118248      0.203241\n",
-       "2  USC00514830       0.114192      0.154966\n",
-       "3  USC00516128       0.495748      0.507005\n",
-       "4  USC00517948       0.057975      0.152727\n",
-       "5  USC00518838       0.094615      0.638182\n",
-       "6  USC00519281       0.151525      0.244931\n",
-       "7  USC00519397       0.022661      0.075314\n",
-       "8  USC00519523       0.050044      0.162010"
+       "       Station June Avg Prcp Dec Avg Prcp\n",
+       "0  USC00511918         0.015        0.138\n",
+       "1  USC00513117         0.118        0.203\n",
+       "2  USC00514830         0.114        0.155\n",
+       "3  USC00516128         0.496        0.507\n",
+       "4  USC00517948         0.058        0.153\n",
+       "5  USC00518838         0.095        0.638\n",
+       "6  USC00519281         0.152        0.245\n",
+       "7  USC00519397         0.023        0.075\n",
+       "8  USC00519523         0.050        0.162"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1599,7 +1598,9 @@
     "dec_p_ls = list(dec_p)\n",
     "\n",
     "june_p_df = pd.DataFrame(june_p_ls, columns=['Station', 'June Avg Prcp'])\n",
+    "june_p_df[\"June Avg Prcp\"] = june_p_df[\"June Avg Prcp\"].map(\"{:,.3f}\".format)\n",
     "dec_p_df = pd.DataFrame(dec_p_ls, columns=['Station', 'Dec Avg Prcp'])\n",
+    "dec_p_df[\"Dec Avg Prcp\"] = dec_p_df[\"Dec Avg Prcp\"].map(\"{:,.3f}\".format)\n",
     "\n",
     "combined_p_df = june_p_df.merge(dec_p_df, how='left', on='Station')\n",
     "combined_p_df"
@@ -1607,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1760,7 @@
        "8          56.0          79.0  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1771,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1816,8 +1817,8 @@
        "      <td>85.0</td>\n",
        "      <td>57.0</td>\n",
        "      <td>81.0</td>\n",
-       "      <td>0.015157</td>\n",
-       "      <td>0.138146</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0.138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1828,8 +1829,8 @@
        "      <td>83.0</td>\n",
        "      <td>63.0</td>\n",
        "      <td>80.0</td>\n",
-       "      <td>0.118248</td>\n",
-       "      <td>0.203241</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>0.203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1840,8 +1841,8 @@
        "      <td>81.0</td>\n",
        "      <td>62.0</td>\n",
        "      <td>79.0</td>\n",
-       "      <td>0.114192</td>\n",
-       "      <td>0.154966</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>0.155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1852,8 +1853,8 @@
        "      <td>79.0</td>\n",
        "      <td>60.0</td>\n",
        "      <td>83.0</td>\n",
-       "      <td>0.495748</td>\n",
-       "      <td>0.507005</td>\n",
+       "      <td>0.496</td>\n",
+       "      <td>0.507</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1864,8 +1865,8 @@
        "      <td>82.0</td>\n",
        "      <td>64.0</td>\n",
        "      <td>82.0</td>\n",
-       "      <td>0.057975</td>\n",
-       "      <td>0.152727</td>\n",
+       "      <td>0.058</td>\n",
+       "      <td>0.153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1876,8 +1877,8 @@
        "      <td>78.0</td>\n",
        "      <td>63.0</td>\n",
        "      <td>78.0</td>\n",
-       "      <td>0.094615</td>\n",
-       "      <td>0.638182</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1888,8 +1889,8 @@
        "      <td>82.0</td>\n",
        "      <td>58.0</td>\n",
        "      <td>79.0</td>\n",
-       "      <td>0.151525</td>\n",
-       "      <td>0.244931</td>\n",
+       "      <td>0.152</td>\n",
+       "      <td>0.245</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1900,8 +1901,8 @@
        "      <td>84.0</td>\n",
        "      <td>56.0</td>\n",
        "      <td>77.0</td>\n",
-       "      <td>0.022661</td>\n",
-       "      <td>0.075314</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1912,8 +1913,8 @@
        "      <td>82.0</td>\n",
        "      <td>56.0</td>\n",
        "      <td>79.0</td>\n",
-       "      <td>0.050044</td>\n",
-       "      <td>0.162010</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.162</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1931,19 +1932,19 @@
        "7  USC00519397  21.27160 -157.81680           70.0           84.0   \n",
        "8  USC00519523  21.33556 -157.71139           71.0           82.0   \n",
        "\n",
-       "   Dec Min Temp  Dec Max Temp  June Avg Prcp  Dec Avg Prcp  \n",
-       "0          57.0          81.0       0.015157      0.138146  \n",
-       "1          63.0          80.0       0.118248      0.203241  \n",
-       "2          62.0          79.0       0.114192      0.154966  \n",
-       "3          60.0          83.0       0.495748      0.507005  \n",
-       "4          64.0          82.0       0.057975      0.152727  \n",
-       "5          63.0          78.0       0.094615      0.638182  \n",
-       "6          58.0          79.0       0.151525      0.244931  \n",
-       "7          56.0          77.0       0.022661      0.075314  \n",
-       "8          56.0          79.0       0.050044      0.162010  "
+       "   Dec Min Temp  Dec Max Temp June Avg Prcp Dec Avg Prcp  \n",
+       "0          57.0          81.0         0.015        0.138  \n",
+       "1          63.0          80.0         0.118        0.203  \n",
+       "2          62.0          79.0         0.114        0.155  \n",
+       "3          60.0          83.0         0.496        0.507  \n",
+       "4          64.0          82.0         0.058        0.153  \n",
+       "5          63.0          78.0         0.095        0.638  \n",
+       "6          58.0          79.0         0.152        0.245  \n",
+       "7          56.0          77.0         0.023        0.075  \n",
+       "8          56.0          79.0         0.050        0.162  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2047,7 @@
        "8  21.33556 -157.71139"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2058,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2066,22 +2067,24 @@
     "<dl>\n",
     "<dt>Station Name</dt><dd>{Station}</dd>\n",
     "<dt>June Temps</dt><dd>Min: {June Min Temp}, Max: {June Max Temp} °F</dd>\n",
+    "<dt>June Prcp</dt><dd>{June Avg Prcp}</dd>\n",
     "<dt>Dec Temps</dt><dd>Min: {Dec Min Temp}, Max: {Dec Max Temp} °F</dd>\n",
+    "<dt>Dec Prcp</dt><dd>{Dec Avg Prcp}</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
     "\n",
-    "station_info = [info_box_template.format(**row) for index, row in final_combined_df.iterrows()]"
+    "station_info = [info_box_template.format(**row) for index, row in p_combined.iterrows()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08211f0a257043938b11ccffdd782df3",
+       "model_id": "756fad81916b4a149a9354502869331f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2098,6 +2101,215 @@
     "marker_layer = gmaps.marker_layer(locations, info_box_content=station_info)\n",
     "fig.add_layer(marker_layer)\n",
     "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Station</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>June Min Temp</th>\n",
+       "      <th>June Max Temp</th>\n",
+       "      <th>Dec Min Temp</th>\n",
+       "      <th>Dec Max Temp</th>\n",
+       "      <th>June Avg Prcp</th>\n",
+       "      <th>Dec Avg Prcp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00511918</td>\n",
+       "      <td>21.31520</td>\n",
+       "      <td>-157.99920</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0.138</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00513117</td>\n",
+       "      <td>21.42340</td>\n",
+       "      <td>-157.80150</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>0.203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00514830</td>\n",
+       "      <td>21.52130</td>\n",
+       "      <td>-157.83740</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>0.155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>21.33310</td>\n",
+       "      <td>-157.80250</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>0.496</td>\n",
+       "      <td>0.507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00517948</td>\n",
+       "      <td>21.39340</td>\n",
+       "      <td>-157.97510</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>0.058</td>\n",
+       "      <td>0.153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>USC00518838</td>\n",
+       "      <td>21.49920</td>\n",
+       "      <td>-158.01110</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>USC00519281</td>\n",
+       "      <td>21.45167</td>\n",
+       "      <td>-157.84889</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.152</td>\n",
+       "      <td>0.245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>21.27160</td>\n",
+       "      <td>-157.81680</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>0.023</td>\n",
+       "      <td>0.075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>USC00519523</td>\n",
+       "      <td>21.33556</td>\n",
+       "      <td>-157.71139</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>0.162</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Station  latitude  longitude  June Min Temp  June Max Temp  \\\n",
+       "0  USC00511918  21.31520 -157.99920           66.0           85.0   \n",
+       "1  USC00513117  21.42340 -157.80150           68.0           83.0   \n",
+       "2  USC00514830  21.52130 -157.83740           67.0           81.0   \n",
+       "3  USC00516128  21.33310 -157.80250           66.0           79.0   \n",
+       "4  USC00517948  21.39340 -157.97510           64.0           82.0   \n",
+       "5  USC00518838  21.49920 -158.01110           67.0           78.0   \n",
+       "6  USC00519281  21.45167 -157.84889           65.0           82.0   \n",
+       "7  USC00519397  21.27160 -157.81680           70.0           84.0   \n",
+       "8  USC00519523  21.33556 -157.71139           71.0           82.0   \n",
+       "\n",
+       "   Dec Min Temp  Dec Max Temp June Avg Prcp Dec Avg Prcp  \n",
+       "0          57.0          81.0         0.015        0.138  \n",
+       "1          63.0          80.0         0.118        0.203  \n",
+       "2          62.0          79.0         0.114        0.155  \n",
+       "3          60.0          83.0         0.496        0.507  \n",
+       "4          64.0          82.0         0.058        0.153  \n",
+       "5          63.0          78.0         0.095        0.638  \n",
+       "6          58.0          79.0         0.152        0.245  \n",
+       "7          56.0          77.0         0.023        0.075  \n",
+       "8          56.0          79.0         0.050        0.162  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_combined"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "latitude          21.393826\n",
+       "longitude       -157.867098\n",
+       "June Min Temp     67.111111\n",
+       "June Max Temp     81.777778\n",
+       "Dec Min Temp      59.888889\n",
+       "Dec Max Temp      79.777778\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_combined.mean()"
    ]
   },
   {
